--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">Lucca Panetta</h2>
                         <hr class="divider divider-light" />
-                        <p class="text-white-75 mb-4">I am a second-year student at CAECE University, immersed in the dynamic field of Systems Engineering. Fueled by a profound passion for programming, particularly with Python, I am eager to explore and embrace cutting-edge advancements in the realm of intelligence worldwide. My journey is characterized by an insatiable appetite for learning and a resolute determination to conquer new challenges.</p>
+                        <p class="text-white-75 mb-4">I am a student at CAECE University, immersed in the dynamic field of Systems Engineering. Fueled by a profound passion for programming, particularly with Python, I am eager to explore and embrace cutting-edge advancements in the realm of intelligence worldwide. My journey is characterized by an insatiable appetite for learning and a resolute determination to conquer new challenges.</p>
                     </div>
                 </div>
             </div>
